UPDATE #comment Fixed storage layout issue, adjusted policies table to fit and style refactoring

--- a/src/app/features/servers/server/storage/server-storage.component.scss
+++ b/src/app/features/servers/server/storage/server-storage.component.scss
@@ -40,66 +40,6 @@ $server-storage-form-border-color: $color-grey-00;
     }
   }
 
-  .storage {
-    li {
-      @include display-flex(row);
-      align-items: center;
-      justify-content: flex-end;
-      @include set-items-interval($space-small, horizontal);
-
-      &:first-child {
-        margin-bottom: $space-small;
-      }
-
-      .storage-device-label {
-        @include flex(0 1 25%);
-      }
-
-      .storage-profile-label {
-        @include flex(0 1 25%);
-      }
-
-      .capacity-label {
-        @include flex(0 1 50%);
-      }
-
-      .name {
-        @include flex(0 1 25%);
-        @include display-flex(row);
-        align-items: center;
-
-        span {
-          margin-left: $space-small;
-        }
-      }
-
-      .storage-profile {
-        @include flex(0 1 25%);
-      }
-
-      .capacity {
-        @include flex(0 1 50%);
-        @include display-flex(row);
-        align-items: center;
-
-        .value {
-          @include flex(2);
-          @include breakpoint(medium) {
-            @include flex(1)
-          }
-        }
-
-        .expand {
-          @include flex(1);
-        }
-
-        .delete {
-          @include flex(1);
-        }
-      }
-    }
-  }
-
   .add-new-storage {
     border: 1px solid $server-storage-form-border-color;
     @include border-radius($input-border-radius);
